RESOLVED FIXED 243441
[XHTML] innerHTML and outerHTML setters use a wrong default namespace
https://bugs.webkit.org/show_bug.cgi?id=243441
Summary [XHTML] innerHTML and outerHTML setters use a wrong default namespace
Ryosuke Niwa
Reported 2022-08-01 20:56:21 PDT
innerHTML and outerHTML setters don't use the correct default namespace.
Attachments
Ryosuke Niwa
Comment 1 2022-08-01 21:03:36 PDT
EWS
Comment 2 2022-08-02 09:39:43 PDT
Committed 253039@main (1ffe018f5d5c): <https://commits.webkit.org/253039@main> Reviewed commits have been landed. Closing PR #2939 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-02 09:40:20 PDT
Note You need to log in before you can comment on or make changes to this bug.