[XHTML] innerHTML and outerHTML setters use a wrong default namespace https://bugs.webkit.org/show_bug.cgi?id=243441

Reviewed by Chris Dumez.

Fixed the bug that the setters of innerHTML and outerHTML use a wrong default namespace URI.
The new behavior matches that of Firefox and Chrome.

* LayoutTests/fast/parser/innerHTML-setter-default-namespace-expected.txt: Added.
* LayoutTests/fast/parser/innerHTML-setter-default-namespace.xhtml: Added.
* Source/WebCore/xml/parser/XMLDocumentParser.cpp:
(WebCore::findXMLParsingNamespaces):

Canonical link: https://commits.webkit.org/253039@main